--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,12 @@
 # Starter pipeline
 - task: Security static source code analysis@88
   inputs:
+    projectName: 'teste'
+    preset: 'Checkmarx Default'
+    fullTeamName: 'CxServer'
+    incScan: true
+- task: Security static source code analysis@88
+  inputs:
     preset: 'Checkmarx Default'
     incScan: true
 # Start with a minimal pipeline that you can customize to build and deploy your code.
